# server/server.js
@@ -3,9 +3,18 @@
 import express from 'express';
 import bodyParser from 'body-parser';
 import Epicmail from './src/controllers/controller';
+// for API documentation
 import swaggerUi from 'swagger-ui-express';
 import swaggerDocument from '../swagger.json';
+// import check token through destructuring
+import {checkToken} from './src/middleware'
+//this allows cross platform stuff
 import cors from 'cors';
+// this allows u to use enviromental variables
+import env from 'dotenv';
+
+// initialize .env file for the secret stuff
+env.config();
 
 const router = express.Router();
 const app = express();
@@ -21,13 +30,13 @@ app.use(cors());
 app.get('/', (req, res) => res.status(200).send({ message: 'YAY! Congratulations! Your first endpoint is working' }));
 app.post('/api/v1/auth/signup', Epicmail.createAUser);
 app.post('/api/v1/auth/login', Epicmail.login);
-app.post('/api/v1/messages/createMessage', Epicmail.sendMessage);
-app.get('/api/v1/messages/allMessagesPerUser/:id', Epicmail.getAllMessagesPerUser);
-app.get('/api/v1/messages/getAMessage/:id', Epicmail.getAMessage);
-app.get('/api/v1/messages/unreadMessagesPerUser/:id', Epicmail.getUnreadMessagesPerUser);
-app.get('/api/v1/messages/getMessagesSentByAUser/:id', Epicmail.getMessagesSentByAUser);
-app.get('/api/v1/users/:id', Epicmail.getOneUser);
-app.delete('/api/v1/messages/deleteAMessage/:id', Epicmail.deleteAMessage);
+app.post('/api/v1/createAMessage', checkToken, Epicmail.sendMessage);
+app.get('/api/v1/messages',checkToken, Epicmail.getAllMessagesPerUser);
+app.get('/api/v1/messages/:id', checkToken, Epicmail.getAMessage);
+app.get('/api/v1/unreadMessages', checkToken, Epicmail.getUnreadMessagesPerUser);
+app.get('/api/v1/sentMessages', checkToken, Epicmail.getMessagesSentByAUser);
+app.get('/api/v1/users/:id', checkToken, Epicmail.getOneUser);
+app.delete('/api/v1/deleteAMessage/:id', checkToken, Epicmail.deleteAMessage);
 
 /* when the function is called, it should listen on a port */
 /* To automatically pick port on the server instead of usin a single port */
